--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,14 +1,15 @@
-$color-primary: #f38e82;
-$color-grad-1: #fbdb89;
-$color-grad-2: #f48982;
+$color-primary: #9be15d;
+$color-grad-1: #45b962;
+$color-grad-2:  #9be15d;;
 
-$color-grey-light-1: #f9f5f3; // Light background
+$color-grey-light-1: #f8f9f3; // Light background
 $color-grey-light-2: #f2efee; // Light lines
 $color-grey-light-3: #d3c7c3; // Light text (placeholder)
 $color-grey-dark-1: #615551; // Normal text
 $color-grey-dark-2: #918581; // Lighter text
 
 $gradient: linear-gradient(to right bottom, $color-grad-1, $color-grad-2);
+$gradient1: linear-gradient(to right bottom, $color-grad-2, $color-grad-2);
 
 $bp-large: 78.15em; // 1250px
 $bp-medium: 61.25em; // 980px
@@ -40,7 +41,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: $color-grey-dark-1;
-  background-image: $gradient;
+  background-image: $gradient1, .5;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: calc(100vh - 2 * 4vw);
@@ -53,7 +54,7 @@ body {
   background-color: #fff;
   border-radius: 9px;
   overflow: hidden;
-  box-shadow: 0 2rem 6rem 0.5rem rgba($color-grey-dark-1, 0.2);
+  box-shadow: 0 1rem 6rem 0.5rem rgba($color-grey-dark-1, 0.5);
 
   display: grid;
   grid-template-rows: 10rem minmax(100rem, auto);
