change main colors of ui and fix bug of loading recipe

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,10 +8,13 @@
   align-items: center;
   justify-content: space-between;
 
-  &__logo {
-    margin-left: 4rem;
+   svg {
+    margin-left: 6rem;
     height: 4.6rem;
     display: block;
+    path {
+      fill: $color-grey-dark-2;
+    }
   }
 }
 
