--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,4 @@
 @import '../components/Preview/Preview.module.scss';
 @import '../components/Recipe/Recipe.module.scss';
 @import '../components/Upload/Upload.module.scss';
+@import '../components/BookMark/BookMark.module.scss';
